--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+ .question, .answer {
+    border-left: 5px solid lightgrey;
+    padding-left: 16px;
+    margin-top: 16px;
+ }
+
+ .answer {
+  background-color: lightyellow;
+ }
