--- a/app/views/answers/answer.html.erb
+++ b/app/views/answers/answer.html.erb
@@ -2,11 +2,11 @@
 <div class="container">
   <h1>Stupid Coach</h1>
   <div class="question">
-    <%= @question %>
+    <p><%= @question %></p>
     <p><em>-You</em></p>
   </div>
   <div class="answer">
-    <%= @answer %>
+    <p><%= @answer %></p>
     <p><em>-Your coach</em></p>
   </div>
 
