--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,5 +1,6 @@
-<h1>This is the ask view</h1>
+<h1>Stupid Coach</h1>
 
+<p>Ask your coach anything</p>
 <form action="/answer" data-turbo="false">
   <input type="text" name="question">
   <input type="submit" value="Ask!">
